--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,8 @@
 body {
-    background-color: skyblue;
+    background-color: rgb(252, 252, 252);
+}
+.container{
+    display: grid;
+    justify-content: center;
+    align-items: center;
 }
