--- a/templates/produit/_form.html.twig
+++ b/templates/produit/_form.html.twig
@@ -1,4 +1,55 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
-{{ form_end(form) }}
+{% extends 'base.html.twig' %}
+
+{% block title %}Création produit{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('styles/register.css') }}">
+{% endblock %}
+
+{% block body %}
+    <div class="content">
+        <div class="card p-4">
+            <h1 class="h3 font-weight-normal text-center my-3">Création de produit</h1>
+            {{ form_start(form) }}
+                <div class='my-3'>
+                <div class="form-floating mb-3">
+                    {{ form_widget(form.nomProduit, {
+                        'attr': {'class': 'form-control', 'id': 'floatingNomProduit'}
+                    }) }}
+                    {{ form_label(form.nomProduit, 'Nom produit', {
+                        'label_attr': {'class': 'form-label', 'for': 'floatingNomProduit'}
+                    }) }}
+                </div>
+                <div class="form-floating mb-3">
+                    {{ form_widget(form.description, {
+                        'attr': {'class': 'form-control', 'id': 'floatingDescriptionProduit'}
+                    }) }}
+                    {{ form_label(form.description, 'Description produit', {
+                        'label_attr': {'class': 'form-label', 'for': 'floatingDescriptionProduit'}
+                    }) }}
+                </div>  
+                <div class="form-floating mb-3">
+                    {{ form_widget(form.prix, {
+                        'attr': {'class': 'form-control', 'id': 'floatingPrixProduit'}
+                    }) }}
+                    {{ form_label(form.prix, 'Prix produit', {
+                        'label_attr': {'class': 'form-label', 'for': 'floatingPrixProduit'}
+                    }) }}
+                </div>
+                <div class="form-floating mb-3">
+                    {{ form_widget(form.categorie, {
+                        'attr': {'class': 'form-control', 'id': 'floatingCategorieProduit', 'multiple': 'multiple'}
+                    }) }}
+                    {{ form_label(form.categorie, 'Categorie produit', {
+                        'label_attr': {'class': 'form-label', 'for': 'floatingCategorieProduit'}
+                    }) }}
+                </div>
+                <div class='text-center my-3'>
+                    <button class="btn btn-primary">{{ button_label|default('Créer') }}</button>
+                </div>
+            </div>
+            {{ form_end(form) }}
+        </div>
+    </div>
+{% endblock %}
