--- a/templates/produit/produits_par_categorie.html.twig
+++ b/templates/produit/produits_par_categorie.html.twig
@@ -1,14 +1,31 @@
 {% extends 'base.html.twig' %}
-
-{% block title %}Produits de la catégorie {{ categorie.nomCategorie }}{% endblock %}
-
 {% block body %}
-    <h1>Produits de la catégorie {{ categorie.nomCategorie }} :</h1>
-    <ul>
+    <div class="container py-4">
+    <h1>Jeux {{ categorie.nomCategorie }} :</h1>
+        <div class="row">
         {% for produit in produits %}
-            <p>{{ produit.nom }}</p>
-            <!-- Affichez d'autres informations sur le produit selon vos besoins -->
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    {% set imageName = produit.nomProduit|replace({' ': '-'}) %}
+                    <img src="{{ asset('img/produits/' ~ imageName ~ '.jpg') }}" class="card-img-top" alt="{{ produit.nomProduit }}">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ produit.nomProduit }}</h5>
+                        <p class="card-text">{{ produit.prix }} €</p>
+                        <div class='text-center row'>
+                            <div class='col'>
+                                <a href="{{ path('app_produit_detail', {'id': produit.id}) }}" class="btn btn-dark">Voir détails</a>
+                            </div>
+                            <div class='col'>
+                                <form action="{{ path('ajouter_produit_panier', {id: produit.id}) }}" method="POST">
+                                    <input type="hidden" name="produit_id" value="{{ produit.id }}">
+                                    <button type="submit" class='btn btn-dark'>Ajouter au panier</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         {% endfor %}
-
-    </ul>
+        </div>
+    </div>
 {% endblock %}
