--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,11 @@
 
     </head>
     <body>
-        {% block body %}{% endblock %}
+    {% include 'structure/header.html.twig' %}
+
+        {% block body %}
+            {% include 'home/home.html.twig' %}
+        {% endblock %}
         {% block javascripts %}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
