--- a/templates/structure/header.html.twig
+++ b/templates/structure/header.html.twig
@@ -1,26 +1,30 @@
-{% extends 'base.html.twig' %}
 {% block stylesheets %}
-    {{ parent() }}
     <link rel="stylesheet" href="{{ asset('styles/header.css') }}">
 {% endblock %}
 
 {% block body %}
-    <header class="navbar ">
+    <header class="navbar border-bottom">
         <div class="container-fluid">
             <a class="navbar-brand" href="{{ path('home') }}">
                 <img src="{{ asset('img/GameAlley.png') }}" alt="logo Game Alley">
             </a>
             <ul class="nav">
                 {% for categorie in categories %}
-                    <li class="nav-item"><a class="nav-link" href="{{ path('app_categorie_produits', {'id': categorie.id}) }}">{{ categorie.nomCategorie }}</a></li>
+                    <li class="nav-item mx-1"><a class="btn btn-outline-dark" href="{{ path('app_categorie_produits', {'id': categorie.id}) }}">{{ categorie.nomCategorie }}</a></li>
                 {% endfor %}
                 {% if app.user %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
+                    <li class="nav-item mx-1">
+                        <a class="btn btn-secondary" href="{{ path('app_logout') }}">Déconnexion</a>
+                    </li>
+                    <li class="nav-item mx-1">
+                        <form action="{{ path('panier') }}">
+                            <button type="submit" class='btn btn-dark'>Panier</button>
+                        </form>
+                        
                     </li>
                 {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
+                    <li class="nav-item mx-1">
+                        <a class="btn btn-secondary" href="{{ path('app_login') }}">Connexion</a>
                     </li>
                 {% endif %}
             </ul>
